[package]
name = "nat-failover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
env_logger = "0.10.1"
futures = "0.3.29"
gethostname = "0.4.3"
iptables = "0.5.1"
log = "0.4.20"
netdiag = "0.3.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
